crates/apollo-compiler/test_data/diagnostics/0007_operation_with_undefined_variables.txt
Error: variable `$undefinedVariable` is not defined
   ╭─[0007_operation_with_undefined_variables.graphql:3:12]
   │
 3 │     first: $undefinedVariable
   │            ─────────┬────────  
   │                     ╰────────── not found in this scope
───╯
Error: variable `$offset` is not defined
   ╭─[0007_operation_with_undefined_variables.graphql:5:7]
   │
 5 │       offset: $offset
   │       ───────┬───────  
   │              ╰───────── not found in this scope
───╯
Error: variable `$keyword` is not defined
   ╭─[0007_operation_with_undefined_variables.graphql:6:23]
   │
 6 │       keywords: ["a", $keyword]
   │                       ────┬───  
   │                           ╰───── not found in this scope
───╯

